@@ -528,7 +528,8 @@ void rgl_primitive(int* successptr, int* idata, double* vertex, double* normals,
   *successptr = success;
 }
 
-void rgl_surface(int* successptr, int* idata, double* x, double* z, double* y, int* coords, int* orientation)
+void rgl_surface(int* successptr, int* idata, double* x, double* z, double* y, int* coords, int* orientation,
+                       int* matrices)
 {
   int success = RGL_FAIL;
 
@@ -539,7 +540,7 @@ void rgl_surface(int* successptr, int* idata, double* x, double* z, double* y, i
     int nx         = idata[0];
     int nz         = idata[1];
 
-    success = as_success( device->add( new Surface(currentMaterial, nx, nz, x, z, y, coords, *orientation,
+    success = as_success( device->add( new Surface(currentMaterial, nx, nz, x, z, y, coords, *orientation, matrices,
     						   device->getIgnoreExtent()) ) );
 
   }
